# SITY2S1

./: .gitignore  README.md
CSC2003/: CMakeLists.txt  README.md
CSC2003/Lab01/: CMakeLists.txt  lab01.c
CSC2003/Lab02/: lab2.c
CSC2003/Lab03/: Lab3.c
